--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,11 @@
 html,
 body {
   @apply w-full h-full;
+  background: transparent !important;
 }
 #root {
   @apply w-full h-full;
+  background: transparent !important;
 }
 
 * {
